# VehSecLabs-SomeIP-Fuzzer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  someip_fuzzer.spec
.github/workflows/: ci.yml
configs/: strategies.toml  target_vsomeip.toml
configs/attack_chains/: deser.yaml  dos.yaml  hijack.yaml  race_offer.yaml  session_steal.yaml  sub_storm.yaml  tp_attack.yaml  version_downgrade.yaml
plan/: 00-MASTER-SPEC.md  01-PHASE-0-INIT.md  02-PHASE-1-PROTOCOL.md  03-PHASE-2-MUTATION.md  04-PHASE-3-STATE-ATTACK.md  05-PHASE-4-FEEDBACK-CRASH.md  06-PHASE-5-GUI-BASE.md  07-PHASE-6-GUI-FUZZ.md  08-PHASE-7-GUI-REPORT.md  09-PHASE-8-INTEGRATION.md  10-PHASE-9-DELIVERABLES.md
scripts/: agent.py  agent.service  gen_vsomeip_config.py  install_vsomeip.sh  start_target.sh  switch_vsomeip_version.sh  vsomeip_config.json
src/someip_fuzzer/: main.py
src/someip_fuzzer/core/: __init__.py  attack_chain.py  engine.py  feedback.py  monitor.py  mutator.py  protocol.py  replay.py  reporter.py  (+2 more)
templates/: report.html
templates/styles/: report.css
tests/: test_attack_chain.py  test_feedback.py  test_monitor.py  test_mutators.py  test_protocol.py  test_replay.py  test_reporter.py  test_smoke.py  test_state_machine.py  test_transport.py
tests/e2e/: conftest.py  test_attack_chains.py  test_connectivity.py  test_fuzz_stability.py  test_known_cve.py  test_replay.py  test_report.py  test_sd_discovery.py
tests/gui/: test_main_window.py  test_packet_stream.py  test_tab_analysis.py  test_tab_fuzzer.py  test_tab_report.py  test_tab_results.py  test_tab_target.py
(+36 files in other folders)
