[project]
name = "someip-fuzzer"
version = "0.1.0"
description = "Automated fuzzing tool for automotive SOME/IP services"
authors = [{name = "VehSecLabs"}]
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "scapy>=2.5",
    "PyQt6>=6.6",
    "qasync>=0.27",
    "pyqtgraph>=0.13",
    "loguru>=0.7",
    "jinja2>=3.1",
    "weasyprint>=60",
    "tomli-w>=1.0",
    "psutil>=5.9",
]

[project.scripts]
someip-fuzzer = "someip_fuzzer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/someip_fuzzer"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "sphinx>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=someip_fuzzer --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
